--- a/src/Project/Common/code/Views/Common/Sublayouts/Footer.cshtml
+++ b/src/Project/Common/code/Views/Common/Sublayouts/Footer.cshtml
@@ -6,6 +6,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
+                <h2>Here you GO CI CD</h2>
 				@Html.Sitecore().Placeholder("postfooter")
 			</div>
 		</div>
