--- a/src/Project/Habitat/code/Views/Website/Layouts/Default.cshtml
+++ b/src/Project/Habitat/code/Views/Website/Layouts/Default.cshtml
@@ -26,7 +26,7 @@
   @RenderAssetsService.Current.RenderStyles()
   @Html.Sitecore().VisitorIdentification()
 </head>
-<body class="header-static @(Sitecore.Context.PageMode.IsNormal ? "" : (Sitecore.Context.PageMode.IsExperienceEditor ? "pagemode-edit" : "pagemode-preview"))">
+<body style="background-color:red !important" class="header-static @(Sitecore.Context.PageMode.IsNormal ? "" : (Sitecore.Context.PageMode.IsExperienceEditor ? "pagemode-edit" : "pagemode-preview"))">
   <div id="main-container">
     <header class="header-static">
       @Html.Sitecore().Placeholder("header-top")
